--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -4,8 +4,11 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ng serve --proxy-config proxy-conf.json",
+    "build": "ng build -prod",
+    "postbuild": "npm run deploy",
+    "predeploy": "rimraf ../resources/static && mkdir ../resources/static",
+    "deploy": "copyfiles -f dist/** ../resources/static",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
