--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "fabric": "^1.7.16",
     "font-awesome": "^4.7.0",
     "primeng": "^4.0.0",
     "rxjs": "^5.1.0",
