Added host parameter in ng serve

--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy-conf.json",
+    "start": "ng serve --proxy-config proxy-conf.json --host localhost",
     "build": "ng build -prod",
     "postbuild": "npm run deploy",
     "predeploy": "rimraf ../resources/static/ && mkdirp ../resources/static",
